--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <canvas></canvas>
 <canvas height="1000" width="1000"></canvas>
 <script type="module" src="/src/main.ts"></script>
+<input type="range" name="" id="partRange" min="0" max="1" step="any" >
