--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <canvas height="1000" width="1000"></canvas>
 <script type="module" src="/src/main.ts"></script>
 <input type="range" name="" id="partRange" min="0" max="1" step="any" >
+<input type="range" name="" id="minProvsRange" min="0" max="100" step="1" value="10" >
