--- a/src/descr_strat_variator/index.html
+++ b/src/descr_strat_variator/index.html
@@ -1,5 +1,19 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <style>
+  .info-table{
+    border-collapse: collapse;
+  }
+  .info-table td{
+    border: 1px solid black;
+  }
+  .info-table th{
+    border: 1px solid black;
+    cursor: pointer;
+    background-color: lightgray;
+  }
+  .info-table th:hover{
+    background-color: gray;
+  }
   #settings-container{
     border: 1px solid rgba(0, 0, 0, 0.881);
     border-radius: 7px;
